--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,262 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7700
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id002
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7701
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id003
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 51.158.195.96
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id004
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 154.85.1.130
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1698843555400
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10845
+    udp: true
+    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10838
+    udp: true
+    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10850
+    udp: true
+    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10837
+    udp: true
+    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 51.158.195.96
+    port: 80
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
+  - &id011
+    name: 🇬🇧_GB_英国_1
+    type: vmess
+    server: ukmws.mainssh.xyz
+    port: 443
+    cipher: auto
+    uuid: 59341904-14e4-47e0-b89b-077795482ee2
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: pmsc.pubgmobile.com
+  - &id012
+    name: 🇦🇺_AU_澳大利亚
+    type: ss
+    server: au.doushimeng.com
+    port: 24652
+    password: dba1572e-858f-4f07-a003-e1c80d189de3
+    cipher: chacha20-ietf-poly1305
+  - &id013
     name: 🇺🇸_US_美国_1
+    type: ss
+    server: us.doushimeng.com
+    port: 22853
+    password: dba1572e-858f-4f07-a003-e1c80d189de3
+    cipher: chacha20-ietf-poly1305
+  - &id014
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: host-053.crazyspeed.xyz
+    port: 10911
+    password: ff21950f-e77d-4132-bbc1-d864b515251c
+    cipher: chacha20-ietf-poly1305
+  - &id015
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 51.158.204.15
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: ssr
+    server: 120.240.88.111
+    port: 7707
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id017
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
+    type: ssr
+    server: 120.240.88.111
+    port: 7706
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id018
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
+    type: ssr
+    server: 120.240.88.111
+    port: 7701
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7703
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_10
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7708
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id021
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_11
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7709
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id022
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 5.161.86.42
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id023
+    name: 🇫🇮_FI_芬兰->🇩🇪_DE_德国
+    type: vmess
+    server: bia-kanal-telegram.freev2alpha.cfd
+    port: 2053
+    cipher: auto
+    uuid: 4a923b7d-7f20-4e8a-81e3-1e7eaf9cc504
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id024
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 18.168.189.51
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 112.29.94.23
+    port: 43526
+    cipher: auto
+    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -20,245 +275,8 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id002
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.158.195.96
-    port: 110
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: a8.wxlljc520.com
-    port: 443
-    cipher: auto
-    uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: golinkwuxian.top
-    network: ws
-    ws-opts:
-      path: /apple
-      headers:
-        host: 777.golinkwuxian.top
-  - &id004
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 198.244.228.191
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇬🇧_GB_英国_2
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id006
-    name: 🇫🇷_FR_法国_2
-    type: trojan
-    server: 35.181.180.226
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 51.158.202.253
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 95.164.87.138
-    port: 63830
-    password: dPW6SKhVfqDevBfdrt5eJg
-    cipher: chacha20-ietf-poly1305
-  - &id009
-    name: 🇹🇷_TR_土耳其
-    type: ss
-    server: 94.131.108.237
-    port: 46041
-    password: cDewnplB4DhF7VjzDIdMFf
-    cipher: chacha20-ietf-poly1305
-  - &id010
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 51.158.203.6
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ssr
-    server: 120.240.88.111
-    port: 7701
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ssr
-    server: 120.240.88.111
-    port: 7706
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id013
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7703
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id014
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7704
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id015
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7709
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id016
-    name: 🇨🇳_CN_中国
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7708
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id017
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 54.217.246.11
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇬🇧_GB_英国_3
-    type: trojan
-    server: 18.168.178.12
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇬🇧_GB_英国_4
-    type: trojan
-    server: 18.132.109.205
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: ssrsub.t08.trojan.tel
-    port: 80
-    udp: true
-    password: 4bfa6b63-ebd8-4e32-aac0-c9e7efd1c97f
-    sni: sourceforge.net
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 192.9.132.73
-    port: 80
-    udp: true
-    password: 4bfa6b63-ebd8-4e32-aac0-c9e7efd1c97f
-    sni: sourceforge.net
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 51.159.106.157
-    port: 6917
-    password: VV5v4GjMdKsNt8j0bfTW6y
-    cipher: chacha20-ietf-poly1305
-  - &id023
-    name: 🇺🇦_UA_乌克兰
-    type: ss
-    server: 95.164.89.142
-    port: 58603
-    password: 5UyVcx4jYrcbFwmhPkhzim
-    cipher: chacha20-ietf-poly1305
-  - &id024
-    name: 🇫🇷_FR_法国_6
-    type: ss
-    server: 54.36.174.181
-    port: 5600
-    password: Y6R9pAtvxxzmGC
-    cipher: aes-256-gcm
-  - &id025
-    name: 🇫🇷_FR_法国_7
-    type: ss
-    server: 54.36.174.181
-    port: 2375
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
-  - &id026
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: mm2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm2.shabijichang.com
   - &id027
-    name: 🇺🇸_US_美国_7
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -273,41 +291,34 @@ proxies:
       headers:
         host: sbl2.shabijichang.com
   - &id028
-    name: 🇨🇦_CA_加拿大
+    name: 🇷🇺_RU_俄罗斯联邦
     type: vmess
-    server: 23.227.39.84
-    port: 8080
+    server: 176.120.74.142
+    port: 443
     cipher: auto
-    uuid: 969f1909-c0d3-4c30-813d-3aec5c838b7d
+    uuid: 75695f5a-b6af-44f4-9983-ae250b53ff9c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /1IKYjV0r/
+      path: /
       headers:
-        host: dongtaiwang13.dtku47.xyz
+        host: 176.120.74.142
   - &id029
-    name: 🇫🇷_FR_法国_8
-    type: ss
-    server: 54.36.174.181
-    port: 8119
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id030
-    name: 🇫🇷_FR_法国_9
-    type: ss
-    server: 54.36.174.181
-    port: 6697
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
-  - &id031
-    name: 🇫🇷_FR_法国_10
-    type: ss
-    server: 54.36.174.181
-    port: 6679
-    password: TEzjfAYq2IjtuoS
-    cipher: aes-256-gcm
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 158.101.7.8
+    port: 80
+    cipher: auto
+    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: 158.101.7.8
+    network: ws
+    ws-opts:
+      path: /
 proxy-groups:
   - name: PROXY
     type: select
@@ -363,8 +374,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -399,8 +408,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
   - name: SELECT
     type: select
     proxies:
@@ -433,8 +440,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
