--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,250 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7700
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7701
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id003
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.158.195.96
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 154.85.1.130
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1698843555400
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10845
-    udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
-    udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
-    udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10837
-    udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.195.96
-    port: 80
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id011
-    name: 🇬🇧_GB_英国_1
-    type: vmess
-    server: ukmws.mainssh.xyz
-    port: 443
-    cipher: auto
-    uuid: 59341904-14e4-47e0-b89b-077795482ee2
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: pmsc.pubgmobile.com
-  - &id012
-    name: 🇦🇺_AU_澳大利亚
-    type: ss
-    server: au.doushimeng.com
-    port: 24652
-    password: dba1572e-858f-4f07-a003-e1c80d189de3
-    cipher: chacha20-ietf-poly1305
-  - &id013
-    name: 🇺🇸_US_美国_1
-    type: ss
-    server: us.doushimeng.com
-    port: 22853
-    password: dba1572e-858f-4f07-a003-e1c80d189de3
-    cipher: chacha20-ietf-poly1305
-  - &id014
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: ss
-    server: host-053.crazyspeed.xyz
-    port: 10911
-    password: ff21950f-e77d-4132-bbc1-d864b515251c
-    cipher: chacha20-ietf-poly1305
-  - &id015
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 51.158.204.15
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
-    type: ssr
-    server: 120.240.88.111
-    port: 7707
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id017
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
-    type: ssr
-    server: 120.240.88.111
-    port: 7706
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
-    type: ssr
-    server: 120.240.88.111
-    port: 7701
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id019
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7703
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id020
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_10
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7708
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_11
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7709
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: TG@wangcai_1
-    protocol-param: 84263:3gj7aB
-  - &id022
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 5.161.86.42
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id023
-    name: 🇫🇮_FI_芬兰->🇩🇪_DE_德国
-    type: vmess
-    server: bia-kanal-telegram.freev2alpha.cfd
-    port: 2053
-    cipher: auto
-    uuid: 4a923b7d-7f20-4e8a-81e3-1e7eaf9cc504
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id024
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 18.168.189.51
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id025
     name: 🇨🇳_CN_中国->🇬🇧_GB_英国
     type: vmess
     server: 112.29.94.23
@@ -260,23 +16,80 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id026
-    name: 🇺🇸_US_美国_3
+  - &id002
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.21.75.246
-    port: 80
+    server: a.asghar-hamrah.store
+    port: 2087
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 2a3263e2-891c-4446-b474-a8c63acb6e25
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: /
+      grpc-mode: none
+  - &id003
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 51.158.195.96
+    port: 80
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id004
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 51.158.195.96
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 51.158.195.96
+    port: 110
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 5.161.86.42
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id007
+    name: 🇬🇧_GB_英国_1
+    type: vmess
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+  - &id008
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 217.196.101.125
+    port: 8080
+    cipher: auto
+    uuid: 752a3159-bf37-487e-b6c0-b6b206e8ee9e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id027
-    name: 🇺🇸_US_美国_4
+  - &id009
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -290,13 +103,28 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id028
-    name: 🇷🇺_RU_俄罗斯联邦
+  - &id010
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 176.120.74.142
-    port: 443
+    server: 172.67.229.35
+    port: 2086
     cipher: auto
-    uuid: 75695f5a-b6af-44f4-9983-ae250b53ff9c
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /IOebhLMhl1CTbFHbL95myfRX2
+      headers:
+        host: ca6.tehme100.fun
+  - &id011
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -304,21 +132,216 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: 176.120.74.142
-  - &id029
+        host: mm2.shabijichang.com
+  - &id012
+    name: 🇩🇪_DE_德国
+    type: ss
+    server: 80.92.204.106
+    port: 9094
+    password: rpgbNnU9rDDU4aWZ
+    cipher: aes-256-cfb
+  - &id013
     name: 🇺🇸_US_美国_5
+    type: trojan
+    server: sg2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 9bda5d52-ebb1-44df-bacf-039182452475
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: series-a1.samanehha.co
+    port: 443
+    password: W74XFALLLuw6m5IA
+    cipher: chacha20-ietf-poly1305
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ssr
+    server: 120.232.177.250
+    port: 1081
+    password: bxsnucrgk6hfish
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    protocol-param: 7521:12HsOu
+  - &id016
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ssr
+    server: 120.240.88.111
+    port: 7701
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id017
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ssr
+    server: 120.240.88.111
+    port: 7709
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id018
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7701
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: ssr
+    server: 120.240.88.111
+    port: 7707
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: ssr
+    server: 120.240.88.111
+    port: 7706
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id021
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7709
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id022
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7704
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id023
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7700
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: TG@wangcai_1
+    protocol-param: 84263:3gj7aB
+  - &id024
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: 158.101.7.8
-    port: 80
+    server: 193.203.203.88
+    port: 2082
     cipher: auto
-    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
+    uuid: 5f2d026e-1dbd-4bb0-aa61-b1bcc544ab2c
     alterId: 0
     tls: false
     skip-cert-verify: true
-    servername: 158.101.7.8
-    network: ws
-    ws-opts:
-      path: /
+    network: http
+  - &id025
+    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国_1
+    type: vmess
+    server: 91.107.157.61
+    port: 443
+    cipher: auto
+    uuid: d20e38ef-1a4d-4009-a00d-2f0d44e3c65a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id026
+    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国_2
+    type: vmess
+    server: 128.140.65.147
+    port: 443
+    cipher: auto
+    uuid: 3cd02bd2-8ee0-448a-e553-692d0ec31173
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id027
+    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国_3
+    type: vmess
+    server: 91.107.145.222
+    port: 443
+    cipher: auto
+    uuid: d20e38ef-1a4d-4009-a00d-2f0d44e3c65a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id028
+    name: 🇬🇧_GB_英国_3
+    type: trojan
+    server: 3.9.5.194
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇬🇧_GB_英国_4
+    type: trojan
+    server: 18.132.183.26
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇮🇪_IE_爱尔兰_1
+    type: trojan
+    server: 52.50.105.142
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇮🇪_IE_爱尔兰_2
+    type: trojan
+    server: 63.32.221.144
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: host-053.crazyspeed.xyz
+    port: 10911
+    password: ff21950f-e77d-4132-bbc1-d864b515251c
+    cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
     type: select
@@ -374,6 +397,9 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
+      - *id030
+      - *id031
+      - *id032
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -408,6 +434,9 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
+      - *id030
+      - *id031
+      - *id032
   - name: SELECT
     type: select
     proxies:
@@ -440,6 +469,9 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
+      - *id030
+      - *id031
+      - *id032
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
