--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,28 +6,29 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    name: 🇮🇪_IE_爱尔兰_1
     type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
+    server: 52.50.105.142
+    port: 22222
     udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
+    password: telegram-id-directvpn
     skip-cert-verify: true
     network: tcp
   - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 158.101.7.8
-    port: 80
+    server: c1.wuxianliulianng.xyz
+    port: 443
     cipher: auto
-    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /apple
+      headers:
+        host: 111.golinkwuxian.top
   - &id003
     name: 🇺🇸_US_美国_2
     type: vmess
@@ -44,81 +45,20 @@ proxies:
       headers:
         host: sbl2.shabijichang.com
   - &id004
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 154.85.1.130
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1698843555400
-  - &id005
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 112.29.94.23
-    port: 43526
-    cipher: auto
-    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10845
-    udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10837
-    udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇫🇮_FI_芬兰->🇩🇪_DE_德国
-    type: vmess
-    server: bia-kanal-telegram.freev2alpha.cfd
-    port: 2053
-    cipher: auto
-    uuid: 4a923b7d-7f20-4e8a-81e3-1e7eaf9cc504
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id009
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: 5.161.86.42
-    port: 3389
+    server: a.asghar-hamrah.store
+    port: 2087
     cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    uuid: 2a3263e2-891c-4446-b474-a8c63acb6e25
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: http
-  - &id010
-    name: 🇬🇧_GB_英国_1
-    type: trojan
-    server: 18.168.189.51
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id011
+    network: grpc
+    grpc-opts:
+      grpc-service-name: /
+      grpc-mode: gun
+  - &id005
     name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: ld2.shabijichang.com
@@ -133,61 +73,91 @@ proxies:
       path: /
       headers:
         host: ld2.shabijichang.com
-  - &id012
+  - &id006
+    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+    type: vmess
+    server: 91.107.145.222
+    port: 443
+    cipher: auto
+    uuid: d20e38ef-1a4d-4009-a00d-2f0d44e3c65a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id007
     name: 🇺🇸_US_美国_4
     type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    server: 172.67.229.38
+    port: 2095
+    cipher: chacha20-poly1305
+    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
       headers:
-        host: sbl2.shabijichang.com
-  - &id013
-    name: 🇬🇧_GB_英国_2
-    type: vmess
-    server: ukmws.mainssh.xyz
-    port: 443
-    cipher: auto
-    uuid: 59341904-14e4-47e0-b89b-077795482ee2
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: pmsc.pubgmobile.com
-  - &id014
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+        host: fr4.v2-teh.fun
+  - &id008
+    name: 🇮🇪_IE_爱尔兰_2
     type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
+    server: 63.32.221.144
+    port: 22222
     udp: true
-    password: 6f3e21c9-2be0-41c3-809a-1fe0546f6fe9
-    sni: alibaba-node.cn
+    password: telegram-id-directvpn
     skip-cert-verify: true
     network: tcp
-  - &id015
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 176.120.74.142
+  - &id009
+    name: 🇬🇧_GB_英国_1
+    type: trojan
+    server: 18.132.183.26
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: 141.193.68.81
     port: 443
+    udp: true
+    password: 29ea82cf-f956-42b2-a5dc-35feea39e7ff
+    sni: glc-us3.windowsupdatea.com
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 193.203.203.88
+    port: 2082
     cipher: auto
-    uuid: 75695f5a-b6af-44f4-9983-ae250b53ff9c
+    uuid: 5f2d026e-1dbd-4bb0-aa61-b1bcc544ab2c
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: 176.120.74.142
+    network: http
+  - &id012
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 112.29.94.23
+    port: 43526
+    cipher: auto
+    uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875
+    alterId: 64
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 3.9.5.194
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -227,8 +197,6 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
-      - *id014
-      - *id015
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -247,8 +215,6 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
-      - *id014
-      - *id015
   - name: SELECT
     type: select
     proxies:
@@ -265,8 +231,6 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
-      - *id014
-      - *id015
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
