--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,31 +6,52 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇮🇪_IE_爱尔兰_1
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
     type: trojan
-    server: 52.50.105.142
-    port: 22222
+    server: other.kunlun-ppg.com
+    port: 10845
     udp: true
-    password: telegram-id-directvpn
+    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
   - &id002
-    name: 🇺🇸_US_美国_1
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10850
+    udp: true
+    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇰🇷_KR_韩国->🇺🇸_US_美国
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10837
+    udp: true
+    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇷🇺_RU_俄罗斯联邦_1
     type: vmess
-    server: c1.wuxianliulianng.xyz
-    port: 443
+    server: els1.yunjisuan.cf
+    port: 80
     cipher: auto
-    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    uuid: c75b345e-bb05-4a44-88e1-ca026ffe965d
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /apple
+      path: /
       headers:
-        host: 111.golinkwuxian.top
-  - &id003
-    name: 🇺🇸_US_美国_2
+        host: tms.dingtalk.com
+  - &id005
+    name: 🇺🇸_US_美国_1
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -44,8 +65,53 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id004
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: bb5.wuxianliulianng.xyz
+    port: 443
+    cipher: auto
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 555.golinkwuxian.top
+  - &id007
     name: 🇺🇸_US_美国_3
+    type: vmess
+    server: a7.wxlljc520.com
+    port: 443
+    cipher: auto
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 777.golinkwuxian.top
+  - &id008
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id009
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: a.asghar-hamrah.store
     port: 2087
@@ -58,13 +124,13 @@ proxies:
     grpc-opts:
       grpc-service-name: /
       grpc-mode: gun
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+  - &id010
+    name: 🇷🇺_RU_俄罗斯联邦_2
     type: vmess
-    server: ld2.shabijichang.com
+    server: els2.yunjisuan.cf
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: c75b345e-bb05-4a44-88e1-ca026ffe965d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -72,73 +138,121 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ld2.shabijichang.com
-  - &id006
-    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+        host: tms.dingtalk.com
+  - &id011
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 91.107.145.222
+    server: c1.wuxianliulianng.xyz
     port: 443
     cipher: auto
-    uuid: d20e38ef-1a4d-4009-a00d-2f0d44e3c65a
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: http
-  - &id007
-    name: 🇺🇸_US_美国_4
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 111.golinkwuxian.top
+  - &id012
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 172.67.229.38
-    port: 2095
-    cipher: chacha20-poly1305
-    uuid: 617c9bc4-4116-41c6-99e0-ace49a38fcdb
+    server: c5.wuxianliulianng.xyz
+    port: 443
+    cipher: auto
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 555.golinkwuxian.top
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10838
+    udp: true
+    password: b5d54f18-0e1f-4562-b2e4-de3bf984a317
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: tttt.ssfree.ru
+    port: 443
+    cipher: auto
+    uuid: 12797f4c-8bb4-11ee-8458-00163e49219e
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /search
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: laxuskfa.qkhbyf.tech
+    port: 2052
+    cipher: auto
+    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /Jnv8ViZOUVgijjOh0p5uGjHnXIiY
+      path: /lonan
       headers:
-        host: fr4.v2-teh.fun
-  - &id008
-    name: 🇮🇪_IE_爱尔兰_2
-    type: trojan
-    server: 63.32.221.144
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇬🇧_GB_英国_1
-    type: trojan
-    server: 18.132.183.26
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 141.193.68.81
-    port: 443
-    udp: true
-    password: 29ea82cf-f956-42b2-a5dc-35feea39e7ff
-    sni: glc-us3.windowsupdatea.com
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇨🇦_CA_加拿大
+        host: usiorc.qkhbyf.tech
+  - &id016
+    name: 🇺🇸_US_美国_9
     type: vmess
-    server: 193.203.203.88
-    port: 2082
+    server: a8.wxlljc520.com
+    port: 443
     cipher: auto
-    uuid: 5f2d026e-1dbd-4bb0-aa61-b1bcc544ab2c
+    uuid: 4d7732ee-986a-4c25-8443-d6fefa8d2190
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /apple
+      headers:
+        host: 777.golinkwuxian.top
+  - &id017
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: snmxw.qkhbyf.tech
+    port: 2052
+    cipher: auto
+    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: http
-  - &id012
+    network: ws
+    ws-opts:
+      path: /lonanhis
+      headers:
+        host: bx.qkhbyf.tech
+  - &id018
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 172.67.77.246
+    port: 2052
+    cipher: auto
+    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /lonan
+      headers:
+        host: vdsus.1145114.me
+  - &id019
     name: 🇨🇳_CN_中国->🇬🇧_GB_英国
     type: vmess
     server: 112.29.94.23
@@ -149,15 +263,32 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id013
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 3.9.5.194
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
+  - &id020
+    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+    type: vmess
+    server: us.lonan.can.1145114.me
+    port: 2052
+    cipher: auto
+    uuid: 6da3e574-52f1-4690-a53b-2847ce756456
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /lonan
+      headers:
+        host: vdsus.1145114.me
+  - &id021
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: de-v2ray.freevmess.com
+    port: 8442
+    cipher: auto
+    uuid: 0ff3822e-885b-4293-ac74-7faa98989569
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
 proxy-groups:
   - name: PROXY
     type: select
@@ -197,6 +328,14 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -215,6 +354,14 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
   - name: SELECT
     type: select
     proxies:
@@ -231,6 +378,14 @@ proxy-groups:
       - *id011
       - *id012
       - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
